# QA-System

./: .env.example  ARCHITECTURE.md  GRAPH_RAG_ARCHITECTURE_GUIDE.md  INDEXING_DB_GRAPHRAG_REPORT_SLIDES.md  README.md  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py
app/api/middleware/: auth.py  logging.py
app/api/routers/: health.py  qa.py
app/api/schemas/: request.py  response.py
app/core/config/: settings.py
app/core/errors/: exceptions.py
app/core/observability/: metrics.py  tracing.py
app/domain/models/: document.py  entity.py  relation.py  retrieval.py
app/domain/ports/: graph_port.py  llm_port.py  vector_port.py
app/domain/services/: answer_service.py  extraction_service.py  normalization_service.py  retrieval_service.py
app/infrastructure/graph/: cypher_repository.py  neo4j_client.py
app/infrastructure/ingestion/chunking/: semantic_chunker.py
app/infrastructure/llm/: factory.py  local_vllm_adapter.py  openai_adapter.py
app/infrastructure/retrieval/: graph_expander.py  hybrid_retriever.py
app/infrastructure/vector/: neo4j_vector_store.py  qdrant_store.py
app/processing/extraction/: extractor.py  json_schema.py  prompts.py
app/processing/indexing/: graph_indexer.py  vector_indexer.py
app/processing/normalize/: entity_resolver.py  ontology_mapper.py
app/workers/: ingest_worker.py  reindex_worker.py
scripts/: backfill_embeddings.py  backfill_mentions.py  bootstrap_neo4j.py  migrate_taxonomy_relationships.py  run_graph_migration.py  run_ingestion.py
tests/unit/: test_entity_resolver.py  test_ontology_mapper.py
(+2 files in other folders)
